# pav-sdl3

./: CMakeLists.txt  README.md
assets/shaders/default/: frag.glsl  vert.glsl
assets/shaders/nebula/: frag.glsl  vert.glsl
src/: glad.c  main.cpp
src/include/glad/: glad.h
src/lib/asset_manager/: asset_manager.cpp  asset_manager.h
src/lib/camera/: camera.h
src/lib/font/: font.cpp  font.h
src/lib/font_manager/: font_manager.cpp  font_manager.h
src/lib/rect/: rect.h
src/lib/renderer/: renderer2d.cpp  renderer2d.h
src/lib/screen/: screen.h
src/lib/screen_manager/: screen_manager.h
src/lib/shader/: shader.cpp  shader.h  shader_manager.cpp  shader_manager.h
src/lib/sprite/: sprite.h
src/lib/texture/: extract_sprites.cpp  texture_region.h  texture_split.h
src/screens/: game_screen.h
